--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       </header>
       <div class="content">
         <div class="textBox">
-          <h2>It's not just Coffee<br />It's <span>Starbucks</span></h2>
+          <h2>Não é só café<br />É <span>Starbucks</span></h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
             aliquip ex ea commodo.
           </p>
-          <a href="#">Learn More</a>
+          <a href="#">Saber mais</a>
         </div>
         <div class="imgBox">
           <img src="img1.png" class="starbucks" />
