--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
         <div class="textBox">
           <h2>Não é só café<br />É <span>Starbucks</span></h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo.
+            Experimente nossa seleção exclusiva de grãos premium, cuidadosamente torrados para criar uma xícara excepcional. Desde o icônico Caramel Macchiato até o clássico Espresso, cada bebida é uma obra-prima.
           </p>
           <a href="#">Saber mais</a>
         </div>
